<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="school">Udacity</string>
    <string name="moto">Get Job Ready with Udacity</string>
    <string name="adress1">2465 Latham St</string>
    <string name="adress2">Mountain View, CA 94043</string>
    <string name="phone">650&#8211;555&#8211;5555</string>
    <string name="url">https://www.udacity.com/</string>
    <string name="desc">image</string>

</resources>
