<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rect_round_shape"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.android.helloandroid.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc"
        android:paddingBottom="36dp"
        android:scaleType="centerCrop"
        android:src="@drawable/udacity_courses"/>

    <TextView
        style="@style/textLayout"
        android:text="@string/school"
        android:textSize="72sp"
        android:textStyle="bold"/>

    <TextView
        style="@style/textLayout"
        android:paddingBottom="8dp"
        android:text="@string/moto"
        android:textSize="24sp"
        android:textStyle="italic" />


    <TextView
        style="@style/textLayout"
        android:text="@string/adress1"
        android:textSize="16sp" />


    <TextView
        style="@style/textLayout"
        android:drawableLeft="@drawable/ic_place"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_place"
        android:text="@string/adress2"
        android:textSize="16sp" />


    <TextView
        style="@style/textLayout"
        android:drawableLeft="@drawable/ic_local_phone"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_local_phone"
        android:text="@string/phone"
        android:textSize="16sp" />


    <TextView
        style="@style/textLayout"
        android:drawableLeft="@drawable/ic_public"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_public"
        android:text="@string/url"
        android:textSize="16sp" />


</LinearLayout>
